tablet header finished

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -24,6 +24,11 @@
   }
 }
 
+.header__reg-button {
+  margin-bottom: 20px;
+  color: $secondary-title-color;
+}
+
 .nav-menu__reg-button {
   margin-bottom: 64px;
 }
