--- a/css/main.css
+++ b/css/main.css
@@ -50,156 +50,12 @@ body {
   padding-right: 31px;
 }
 
-.header {
-  position: relative;
-  height: 580px;
-  margin-left: auto;
-  margin-right: auto;
-  overflow: hidden;
-  background-image: url(../images/hero.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: bottom right;
-  background-color: #111319;
-}
-
-@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-  .header {
-    background-image: url(../images/hero@2x.jpg);
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding-left: 39px;
+    padding-right: 39px;
   }
-}
-
-@media (min-device-pixel-ratio: 3), (-webkit-min-device-pixel-ratio: 3), (min-resolution: 288dpi), (min-resolution: 3dppx) {
-  .header {
-    background-image: url(../images/hero@3x.jpg);
-  }
-}
-
-.header__container {
-  padding-top: 40px;
-}
-
-.header__mobile {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.logo {
-  display: inline-block;
-}
-
-.header__logo {
-  margin-right: auto;
-}
-
-.logo__icon {
-  width: 69px;
-  height: 55.5px;
-  fill: #ffffff;
-}
-
-.nav__btn-menu {
-  width: 40px;
-  height: 40px;
-  margin: 0;
-  padding: 0;
-  background-color: transparent;
-  border: none;
-  fill: #ffffff;
-  cursor: pointer;
-  z-index: 2;
-}
-
-.icon-close {
-  display: none;
-}
-
-.nav__btn-menu--is-open .icon-close {
-  display: block;
-  fill: #303030;
-}
-
-.nav__btn-menu--is-open .icon-burger {
-  display: none;
-}
-
-.nav__menu {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 80vw;
-  height: 100vh;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-top: 118px;
-  background-color: #ffffff;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 1.39;
-  letter-spacing: 0.1em;
-  z-index: 1;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
-  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.nav__menu--is-open {
-  -webkit-transform: translateX(0%);
-          transform: translateX(0%);
-}
-
-.nav__list {
-  margin-bottom: 64px;
-}
-
-.nav__item:not(:last-child) {
-  margin-bottom: 24px;
-}
-
-.nav__link {
-  color: #303030;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.nav__link:hover, .nav__link:focus {
-  color: #ff6c00;
-}
-
-.nav__tel {
-  display: inline-block;
-  margin-bottom: 24px;
-  color: #303030;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 1.39;
-  letter-spacing: 0.1em;
-}
-
-.socials-secondary__item:first-child::before {
-  content: "";
-  width: 60px;
-  height: 1px;
-  background-color: inherit;
-}
-
-.socials-secondary__item:not(:last-child) {
-  margin-bottom: 24px;
-}
-
-.socials-secondary__link {
-  color: inherit;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 1.36;
 }
 
 .reg-button {
@@ -222,6 +78,11 @@ body {
 
 .reg-button:hover, .reg-button:focus {
   background-color: #ff6c00;
+  color: #ffffff;
+}
+
+.header__reg-button {
+  margin-bottom: 20px;
   color: #ffffff;
 }
 
@@ -279,37 +140,6 @@ body {
   margin-right: 20px;
 }
 
-.hero {
-  padding-top: 112.5px;
-}
-
-.hero__title {
-  margin-bottom: 20px;
-  font-family: "Raleway";
-  font-weight: 700;
-  font-size: 48px;
-  line-height: 1.17;
-  letter-spacing: 0.05em;
-  color: #ffffff;
-}
-
-.hero__text {
-  line-height: 1.63;
-  color: rgba(157, 164, 189, 0.6);
-}
-
-@media screen and (max-width: 767px) {
-  .hero__socials-secondary {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .hero__slider {
-    display: none;
-  }
-}
-
 .section-title {
   font-family: "Raleway", sans-serif;
   margin-bottom: 20px;
@@ -328,22 +158,6 @@ body {
 .section-title--bright {
   margin-bottom: 44px;
   color: #ffffff;
-}
-
-.about__container {
-  padding-top: 84px;
-  padding-bottom: 84px;
-}
-
-.section-text {
-  line-height: 1.86;
-  color: #555555;
-  margin-bottom: 20px;
-}
-
-.section-text--small {
-  font-size: 14px;
-  margin-bottom: 40px;
 }
 
 .backdrop {
@@ -632,6 +446,501 @@ body {
   height: 18px;
 }
 
+.socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.socials__item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.socials__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: #fff;
+}
+
+.socials__icon {
+  width: 20px;
+  height: 20px;
+  fill: #303030;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.socials__icon:hover, .socials__icon:focus {
+  fill: #ff6c00;
+}
+
+.header {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    padding-top: 40px;
+    padding-bottom: 183px;
+    background-image: url(../images/hero.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    background-color: #111319;
+  }
+}
+
+@media screen and (max-width: 767px) and (min-device-pixel-ratio: 2), screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 767px) and (min-resolution: 192dpi), screen and (max-width: 767px) and (min-resolution: 2dppx) {
+  .header {
+    background-image: url(../images/hero@2x.jpg);
+  }
+}
+
+@media screen and (max-width: 767px) and (min-device-pixel-ratio: 3), screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 3), screen and (max-width: 767px) and (min-resolution: 288dpi), screen and (max-width: 767px) and (min-resolution: 3dppx) {
+  .header {
+    background-image: url(../images/hero@3x.jpg);
+  }
+}
+
+.header__container {
+  position: relative;
+}
+
+@media screen and (min-width: 768px) {
+  .header__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__content {
+    padding-top: 40px;
+    padding-bottom: 234px;
+    background-image: url(../images/hero.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    background-color: #111319;
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .header__content {
+    background-image: url(../images/hero@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 3), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 3), screen and (min-width: 768px) and (min-resolution: 288dpi), screen and (min-width: 768px) and (min-resolution: 3dppx) {
+  .header__content {
+    background-image: url(../images/hero@3x.jpg);
+  }
+}
+
+.aside-socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  width: 85px;
+}
+
+@media screen and (max-width: 767px) {
+  .aside-socials {
+    display: none;
+  }
+}
+
+.aside__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+  -webkit-transform-origin: 0 0;
+          transform-origin: 0 0;
+}
+
+.aside__list::before {
+  content: "";
+  width: 60px;
+  height: 1px;
+  margin-right: 40px;
+  margin-left: 40px;
+  background-color: #303030;
+}
+
+.aside__item:not(:last-child) {
+  margin-right: 40px;
+}
+
+.aside__link {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.2em;
+  color: #303030;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.aside__link:hover, .aside__link:focus {
+  color: #ff6c00;
+}
+
+.nav-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 23px;
+}
+
+.logo {
+  display: inline-block;
+}
+
+@media screen and (min-width: 768px) {
+  .header__logo {
+    position: absolute;
+    top: 32px;
+    left: 10px;
+  }
+}
+
+.logo__icon {
+  width: 69px;
+  height: 55.5px;
+  fill: #ffffff;
+}
+
+@media screen and (min-width: 768px) {
+  .logo__icon {
+    fill: #303030;
+  }
+}
+
+.nav__btn-menu {
+  position: absolute;
+  top: 10px;
+  right: 31px;
+  width: 40px;
+  height: 40px;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  fill: #ffffff;
+  cursor: pointer;
+  z-index: 2;
+}
+
+@media screen and (min-width: 768px) {
+  .nav__btn-menu {
+    display: none;
+  }
+}
+
+.icon-close {
+  display: none;
+}
+
+.nav__btn-menu--is-open .icon-close {
+  display: block;
+  fill: #303030;
+}
+
+.nav__btn-menu--is-open .icon-burger {
+  display: none;
+}
+
+.header__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 100%;
+}
+
+@media screen and (max-width: 767px) {
+  .header__menu {
+    display: none;
+  }
+}
+
+.header__nav {
+  margin-right: auto;
+}
+
+.header__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.header__item:not(:last-child) {
+  margin-right: 24px;
+}
+
+.header__link {
+  display: block;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.1em;
+  color: #ffffff;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header__link:hover, .header__link:focus {
+  color: #ff6c00;
+}
+
+.reg-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header__tel {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #ffffff;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header__tel:hover, .header__tel:focus {
+  color: #ff6c00;
+}
+
+@media screen and (max-width: 767px) {
+  .nav__menu {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 80vw;
+    height: 100vh;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 118px;
+    background-color: #ffffff;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 1.39;
+    letter-spacing: 0.1em;
+    z-index: 1;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+    -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav__menu {
+    display: none;
+  }
+}
+
+.nav__menu--is-open {
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
+}
+
+@media screen and (max-width: 767px) {
+  .nav__list {
+    margin-bottom: 64px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .nav__item:not(:last-child) {
+    margin-bottom: 24px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav__item:not(:last-child) {
+    margin-right: 24px;
+  }
+}
+
+.nav__link {
+  color: #303030;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .nav__link {
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.1em;
+    color: #ffffff;
+  }
+}
+
+.nav__link:hover, .nav__link:focus {
+  color: #ff6c00;
+}
+
+.nav__tel {
+  display: inline-block;
+  color: #303030;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.39;
+  letter-spacing: 0.1em;
+}
+
+@media screen and (max-width: 767px) {
+  .nav__tel {
+    margin-bottom: 24px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav__tel {
+    font-size: 12px;
+    line-height: 1.33;
+    text-align: center;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #ffffff;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .socials-secondary {
+    display: none;
+  }
+}
+
+.socials-secondary__item:first-child::before {
+  content: "";
+  width: 60px;
+  height: 1px;
+  background-color: inherit;
+}
+
+.socials-secondary__item:not(:last-child) {
+  margin-bottom: 24px;
+}
+
+.socials-secondary__link {
+  color: inherit;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.36;
+}
+
+.hero {
+  padding-top: 112.5px;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    padding-top: 164px;
+    padding-right: 157px;
+    padding-left: 70px;
+  }
+}
+
+.hero__title {
+  margin-bottom: 20px;
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 1.17;
+  letter-spacing: 0.05em;
+  color: #ffffff;
+}
+
+.hero__text {
+  line-height: 1.63;
+  color: rgba(157, 164, 189, 0.6);
+}
+
+@media screen and (max-width: 767px) {
+  .hero__socials-secondary {
+    display: none;
+  }
+}
+
+.hero__slider {
+  display: none;
+}
+
+.about__container {
+  padding-top: 84px;
+  padding-bottom: 84px;
+}
+
+.section-text {
+  line-height: 1.86;
+  color: #555555;
+  margin-bottom: 20px;
+}
+
+.section-text--small {
+  font-size: 14px;
+  margin-bottom: 40px;
+}
+
 .pricing {
   position: relative;
   background-color: #111319;
@@ -810,50 +1119,6 @@ body {
   margin-bottom: 30px;
   line-height: 1.36;
   color: #ff6c00;
-}
-
-.socials {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.socials__item:not(:last-child) {
-  margin-right: 10px;
-}
-
-.socials__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: #fff;
-}
-
-.socials__icon {
-  width: 20px;
-  height: 20px;
-  fill: #303030;
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.socials__icon:hover, .socials__icon:focus {
-  fill: #ff6c00;
 }
 
 .galery__container {
