--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -5,4 +5,10 @@
   padding-left: 31px;
   padding-right: 31px;
   // outline: 2px solid tomato;
+
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    padding-left: 39px;
+    padding-right: 39px;
+  }
 }
