--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,6 +1,26 @@
 .about__container {
   padding-top: 84px;
   padding-bottom: 84px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+}
+
+.about__galery {
+  margin-right: 30px;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+}
+
+.about__item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.about__img {
+  @media screen and (min-width: 768px) {
+    width: 330px;
+  }
 }
 
 .section-text {
@@ -9,7 +29,10 @@
   margin-bottom: 20px;
 
   &--small {
-    font-size: 14px;
     margin-bottom: 40px;
+    font-size: 14px;
+    @media screen and (min-width: 768px) {
+      margin-bottom: 24px;
+    }
   }
 }
