--- a/sass/layout/_pricing.scss
+++ b/sass/layout/_pricing.scss
@@ -1,6 +1,12 @@
 .pricing {
   position: relative;
+  padding-top: 84px;
+  padding-bottom: 84px;
   background-color: $main-bg-color;
+  @media screen and (min-width: 768px) {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
 }
 
 .pricing::after {
@@ -31,11 +37,6 @@
   .pricing::after {
     background-image: url(../images/pricing@3x.jpg);
   }
-}
-
-.pricing__container {
-  padding-top: 84px;
-  padding-bottom: 84px;
 }
 
 .pricing__container p,
