--- a/sass/layout/_reviews.scss
+++ b/sass/layout/_reviews.scss
@@ -1,6 +1,10 @@
-.reviews__container {
+.reviews {
   padding-top: 84px;
   padding-bottom: 84px;
+  @media screen and (min-width: 768px) {
+    padding-top: 100px;
+    padding-bottom: 135px;
+  }
 }
 
 .reviews__text {
