--- a/sass/layout/_pricing.scss
+++ b/sass/layout/_pricing.scss
@@ -64,6 +64,9 @@
   display: flex;
   justify-content: space-between;
   align-items: baseline;
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
 
   &::after {
     content: "";
