--- a/css/main.css
+++ b/css/main.css
@@ -939,12 +939,13 @@ body {
 }
 
 .about__galery {
+  display: none;
   margin-right: 30px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .about__galery {
-    display: none;
+    display: block;
   }
 }
 
@@ -1045,6 +1046,10 @@ body {
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
+}
+
+.pricing__item:not(:last-child) {
+  margin-bottom: 20px;
 }
 
 .pricing__item::after {
@@ -1148,19 +1153,6 @@ body {
   }
 }
 
-.staff__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
 .staff__section-title {
   margin-bottom: 44px;
 }
@@ -1168,6 +1160,7 @@ body {
 @media screen and (min-width: 768px) {
   .staff__list {
     width: 450px;
+    margin: 0 auto;
   }
 }
 
@@ -1192,9 +1185,34 @@ body {
   color: #ff6c00;
 }
 
-.galery__container {
+.galery {
   padding-top: 84px;
   padding-bottom: 84px;
+}
+
+@media screen and (min-width: 768px) {
+  .galery {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .galery__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .galery__item {
+    width: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
+  }
 }
 
 .galery__section-description {
@@ -1206,16 +1224,22 @@ body {
 }
 
 .registration {
+  padding-top: 84px;
+  padding-bottom: 84px;
   background-color: #111319;
 }
 
-.registration__container {
-  padding-top: 84px;
-  padding-bottom: 84px;
+@media screen and (min-width: 768px) {
+  .registration {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
 }
 
-.registration__section-title {
-  text-align: center;
+@media screen and (max-width: 767px) {
+  .registration__section-title {
+    text-align: center;
+  }
 }
 
 .reg-form {
@@ -1227,6 +1251,18 @@ body {
   color: #ffffff;
 }
 
+.reg-form__wrapper {
+  margin-bottom: 44px;
+}
+
+@media screen and (min-width: 768px) {
+  .reg-form__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 .reg-form__field {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1235,10 +1271,24 @@ body {
   -webkit-box-direction: reverse;
       -ms-flex-direction: column-reverse;
           flex-direction: column-reverse;
-  margin-bottom: 20px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
-.reg-form__field:last-of-type {
+@media screen and (max-width: 767px) {
+  .reg-form__field:first-of-type {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .reg-form__field:first-of-type {
+    margin-right: 30px;
+  }
+}
+
+.reg-form__comment {
   margin-bottom: 44px;
 }
 
@@ -1284,7 +1334,16 @@ body {
 
 .contacts {
   position: relative;
+  padding-top: 84px;
+  padding-bottom: 84px;
   background-color: #111319;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
 }
 
 .contacts::after {
@@ -1313,22 +1372,37 @@ body {
   }
 }
 
-.contacts__container {
-  padding-top: 84px;
-  padding-bottom: 84px;
-}
-
 .contacts__container * {
   position: relative;
   z-index: 1;
 }
 
-.contacts__section-title {
-  text-align: center;
+@media screen and (max-width: 767px) {
+  .contacts__section-title {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contacts__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.contacts__address {
+  margin-bottom: 44px;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts__address {
+    width: 330px;
+    margin-right: 30px;
+  }
 }
 
 .contacts__list {
-  margin-bottom: 44px;
   font-size: 18px;
   line-height: 1.67;
   font-style: normal;
@@ -1374,6 +1448,31 @@ body {
   line-height: 1.36;
 }
 
+@media screen and (min-width: 768px) {
+  .footer {
+    padding-top: 56px;
+    padding-bottom: 56px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .footer__socials {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1384,10 +1483,15 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 20px;
   font-weight: 600;
   font-size: 11px;
   line-height: 15px;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__socials {
+    margin-bottom: 20px;
+  }
 }
 
 .footer__socials::before {
