--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -7,9 +7,10 @@
 }
 
 .about__galery {
+  display: none;
   margin-right: 30px;
-  @media screen and (max-width: 767px) {
-    display: none;
+  @media screen and (min-width: 768px) {
+    display: block;
   }
 }
 
