--- a/sass/layout/_contacts.scss
+++ b/sass/layout/_contacts.scss
@@ -1,6 +1,12 @@
 .contacts {
   position: relative;
+  padding-top: 84px;
+  padding-bottom: 84px;
   background-color: $main-bg-color;
+  @media screen and (min-width: 768px) {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
 }
 
 .contacts::after {
@@ -33,23 +39,32 @@
   }
 }
 
-.contacts__container {
-  padding-top: 84px;
-  padding-bottom: 84px;
-}
-
 .contacts__container * {
   position: relative;
   z-index: 1;
 }
 
 .contacts__section-title {
-  text-align: center;
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
+}
+
+.contacts__wrapper {
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+}
+
+.contacts__address {
+  margin-bottom: 44px;
+  @media screen and (min-width: 768px) {
+    width: 330px;
+    margin-right: 30px;
+  }
 }
 
 .contacts__list {
-  margin-bottom: 44px;
-
   font-size: 18px;
   line-height: 1.67;
   font-style: normal;
