--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,6 +5,20 @@
   font-weight: 600;
   font-size: 11px;
   line-height: 1.36;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 56px;
+    padding-bottom: 56px;
+  }
+}
+
+.footer__container {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .footer__socials {
@@ -12,11 +26,13 @@
   justify-content: flex-end;
   align-items: center;
 
-  margin-bottom: 20px;
-
   font-weight: 600;
   font-size: 11px;
   line-height: 15px;
+
+  @media screen and (max-width: 767px) {
+    margin-bottom: 20px;
+  }
 
   &::before {
     content: "";
