--- a/sass/layout/_staff.scss
+++ b/sass/layout/_staff.scss
@@ -8,12 +8,6 @@
   }
 }
 
-.staff__container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .staff__section-title {
   margin-bottom: 44px;
 }
@@ -21,6 +15,7 @@
 .staff__list {
   @media screen and (min-width: 768px) {
     width: 450px;
+    margin: 0 auto;
   }
 }
 
