bg colors fixed, gradient added

--- a/css/main.css
+++ b/css/main.css
@@ -211,6 +211,17 @@ body {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 480px;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+  }
+}
+
 .modal__text {
   font-weight: 700;
   font-size: 20px;
@@ -403,7 +414,7 @@ body {
 .form__checkmark {
   width: 16px;
   height: 15px;
-  fill: #111319;
+  fill: #191c26;
 }
 
 .form__policy-link {
@@ -432,7 +443,7 @@ body {
   padding: 0;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  background-color: #111319;
+  background-color: #191c26;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -505,7 +516,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom right;
-    background-color: #111319;
+    background-color: #191c26;
   }
 }
 
@@ -541,7 +552,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom right;
-    background-color: #111319;
+    background-color: #191c26;
   }
 }
 
@@ -980,7 +991,7 @@ body {
   position: relative;
   padding-top: 84px;
   padding-bottom: 84px;
-  background-color: #111319;
+  background-color: #191c26;
 }
 
 @media screen and (min-width: 768px) {
@@ -1226,7 +1237,7 @@ body {
 .registration {
   padding-top: 84px;
   padding-bottom: 84px;
-  background-color: #111319;
+  background-color: #191c26;
 }
 
 @media screen and (min-width: 768px) {
@@ -1336,7 +1347,7 @@ body {
   position: relative;
   padding-top: 84px;
   padding-bottom: 84px;
-  background-color: #111319;
+  background-color: #191c26;
 }
 
 @media screen and (min-width: 768px) {
@@ -1353,7 +1364,8 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background-image: url(../images/contacts.jpg);
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(157, 164, 189, 0.2)), to(rgba(157, 164, 189, 0.2))), url(../images/contacts.jpg);
+  background-image: linear-gradient(to right, rgba(157, 164, 189, 0.2), rgba(157, 164, 189, 0.2)), url(../images/contacts.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1362,13 +1374,15 @@ body {
 
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .contacts::after {
-    background-image: url(../images/contacts@2x.jpg);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(157, 164, 189, 0.2)), to(rgba(157, 164, 189, 0.2))), url(../images/contacts@2x.jpg);
+    background-image: linear-gradient(to right, rgba(157, 164, 189, 0.2), rgba(157, 164, 189, 0.2)), url(../images/contacts@2x.jpg);
   }
 }
 
 @media (min-device-pixel-ratio: 3), (-webkit-min-device-pixel-ratio: 3), (min-resolution: 288dpi), (min-resolution: 3dppx) {
   .contacts::after {
-    background-image: url(../images/contacts@3x.jpg);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(157, 164, 189, 0.2)), to(rgba(157, 164, 189, 0.2))), url(../images/contacts@3x.jpg);
+    background-image: linear-gradient(to right, rgba(157, 164, 189, 0.2), rgba(157, 164, 189, 0.2)), url(../images/contacts@3x.jpg);
   }
 }
 
