--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -4,7 +4,7 @@ $secondary-font: "Raleway", sans-serif;
 
 // colors
 $accent-color: #ff6c00;
-$main-bg-color: #111319;
+$main-bg-color: #191c26;
 $secondary-bg-color: #f7f7f7;
 $main-title-color: #303030;
 $secondary-title-color: #ffffff;
