--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "./base/reset";
 @import "./utils/vars";
+@import "./utils/visually-hidden";
 @import "./base/body";
 
 @import "./components/container";
